src/objects/Strategic_Account_Worksheet__c.object
<CustomObject>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>Opportunity__r.Deal_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName &amp;&quot; &quot;&amp; Account__r.Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Account Worksheets</relationshipLabel>
        <relationshipName>Strategic_Account_Worksheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Adequacy_of_Current_Position__c</fullName>
        <description>How we feel about our position with this strategic account</description>
        <inlineHelpText>How we feel about our position with this strategic account</inlineHelpText>
        <label>Adequacy of Current Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Euphoria</fullName>
                </value>
                <value>
                    <fullName>Great</fullName>
                </value>
                <value>
                    <fullName>Secure</fullName>
                </value>
                <value>
                    <fullName>Comfort</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Concern</fullName>
                </value>
                <value>
                    <fullName>Discomfort</fullName>
                </value>
                <value>
                    <fullName>Worry</fullName>
                </value>
                <value>
                    <fullName>Fear</fullName>
                </value>
                <value>
                    <fullName>Panic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buting_Influencer_1_Title__c</fullName>
        <formula>Buying_Influencer_1__r.Title</formula>
        <label>Buying Influencer 1 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Influencer_1_Action__c</fullName>
        <label>Buying Influencer 1 Action</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buying_Influencer_1_Coverage__c</fullName>
        <label>Buying Influencer 1 Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good Coverage</fullName>
                </value>
                <value>
                    <fullName>Moderate Coverage</fullName>
                </value>
                <value>
                    <fullName>Minimal / No Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Influencer_1_Influence__c</fullName>
        <label>Buying Influencer 1 Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Influencer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buying Influencer 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategic Account Worksheets</relationshipLabel>
        <relationshipName>Strategic_Account_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buying_Influencer_2_Action__c</fullName>
        <label>Buying Influencer 2 Action</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buying_Influencer_2_Coverage2__c</fullName>
        <label>Buying Influencer 2 Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good Coverage</fullName>
                </value>
                <value>
                    <fullName>Moderate Coverage</fullName>
                </value>
                <value>
                    <fullName>Minimal / No Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Influencer_2_Influence__c</fullName>
        <label>Buying Influencer 2 Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Influencer_2_Title__c</fullName>
        <formula>Buying_Influencer_2__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buying Influencer 2 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Influencer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buying Influencer 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategic Account Worksheets (Buying Influencer 2)</relationshipLabel>
        <relationshipName>Strategic_Account_Worksheets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buying_Influencer_3_Action__c</fullName>
        <label>Buying Influencer 3 Action</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buying_Influencer_3_Coverage__c</fullName>
        <label>Buying Influencer 3 Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good Coverage</fullName>
                </value>
                <value>
                    <fullName>Moderate Coverage</fullName>
                </value>
                <value>
                    <fullName>Minimal / No Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Influencer_3_Influence__c</fullName>
        <label>Buying Influencer 3 Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Influencer_3_Title__c</fullName>
        <formula>Buying_Influencer_3__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buying Influencer 3 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Influencer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buying Influencer 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategic Account Worksheets (Buying Influencer 3)</relationshipLabel>
        <relationshipName>Strategic_Account_Worksheets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buying_Influencer_4_Title__c</fullName>
        <formula>Buying_Influencer_4__r.Title</formula>
        <label>Buying Influencer 4 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitive_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitive Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor Account</value>
            </filterItems>
            <infoMessage>Search for Competitor Account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Account Worksheets (Account)</relationshipLabel>
        <relationshipName>Strategic_Account_Worksheets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_1__c</fullName>
        <description>Who are we competing against?</description>
        <inlineHelpText>Who are we competing against?</inlineHelpText>
        <label>Competitor 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_2__c</fullName>
        <description>Who are we competing against?</description>
        <inlineHelpText>Who are we competing against?</inlineHelpText>
        <label>Competitor 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Path__c</fullName>
        <formula>Opportunity__r.Contract_Path__r.Name</formula>
        <label>Contract Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <formula>TEXT( Opportunity__r.Contract_Status__c )</formula>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Position_Strengths__c</fullName>
        <label>Current Position Strengths</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Position_Weakness__c</fullName>
        <label>Current Position Weakness</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities_Current_Position__c</fullName>
        <label>Opportunities Current Position</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities_Strategy_Date__c</fullName>
        <label>Opportunities Strategy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunities_Strategy__c</fullName>
        <label>Opportunities Strategy</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Update_Next_Steps__c</fullName>
        <formula>Opportunity__r.Opportunity_Update_Next_Step__c</formula>
        <label>Opportunity Update &amp; Next Steps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Strategic Account Worksheets</relationshipLabel>
        <relationshipName>Strategic_Account_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Our_position_vs_competition__c</fullName>
        <description>How do we position ourselves to win vs. competition?</description>
        <inlineHelpText>How do we position ourselves to win vs. competition?</inlineHelpText>
        <label>Our position vs. competition?</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PBM_Partner_Partner_Coverage__c</fullName>
        <label>PBM Partner Partner Coverage</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Benefit_Consultant_Coverage__c</fullName>
        <label>Primary Benefit Consultant Coverage</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Health_Plan_Coverage__c</fullName>
        <label>Primary Client Health Plan Coverage</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Other_Partner_Coverage__c</fullName>
        <label>Primary Other Partner Coverage</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_List__c</fullName>
        <formula>Opportunity__r.Product_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risks_Current_Position__c</fullName>
        <label>Risks Current Position</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risks_Strategy_Date__c</fullName>
        <label>Risks Strategy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risks_Strategy__c</fullName>
        <label>Risks Strategy</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Benefit_Consultant_Coverage__c</fullName>
        <label>Secondary Benefit Consultant Coverage</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Client_Health_Plan_Coverage__c</fullName>
        <label>Secondary Client Health Plan Coverage</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Other_Partner_Coverage__c</fullName>
        <label>Secondary Other Partner Coverage</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Competitor Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selling</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>VOC</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Closed (They currently use one of our competitors)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_to_Win__c</fullName>
        <label>1st Strategy to Win</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strenghts_Strategy__c</fullName>
        <label>Strengths Strategy</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strengths_Current_Position__c</fullName>
        <label>Strengths Current Position</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strengths_Strategy_Date__c</fullName>
        <label>Strengths Strategy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tertiary_Client_Health_Plan_Coverage__c</fullName>
        <label>Tertiary Client Health Plan Coverage</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weakness_Current_Position__c</fullName>
        <label>Weakness Current Position</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses_Strategy_Date__c</fullName>
        <label>Weaknesses Strategy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weaknesses_Strategy__c</fullName>
        <label>Weaknesses Strategy</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Strategy_to_Win_Date__c</fullName>
        <label>1st Strategy to Win Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Strategy_to_Win_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strengths Strategy Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_Account_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Strategy_to_Win_Date__c</fullName>
        <label>2nd Strategy to Win Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Strategy_to_Win_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weaknesses Strategy Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_Account_Worksheets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Strategy_to_Win__c</fullName>
        <label>2nd Strategy to Win</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3rd_Strategy_to_Win_Date__c</fullName>
        <label>3rd Strategy to Win Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Strategy_to_Win_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunities Strategy Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_Account_Worksheets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3rd_Strategy_to_Win__c</fullName>
        <label>3rd Strategy to Win</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X4th_Strategy_to_Win_Date__c</fullName>
        <label>4th Strategy to Win Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X4th_Strategy_to_Win_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risks Strategy Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_Account_Worksheets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X4th_Strategy_to_Win__c</fullName>
        <label>4th Strategy to Win</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Strategic Account Worksheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Strategic Account Worksheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Account Worksheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>